--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-    "name": "stb-gettext",
+    "name": "spa-gettext",
     "version": "1.3.0",
-    "description": "STB SDK localization.",
+    "description": "Application localization tools.",
     "author": {
         "name": "Stanislav Kalashnik",
         "email": "sk@infomir.eu"
     },
-    "repository": "stbsdk/gettext",
+    "repository": "spasdk/gettext",
     "scripts": {
         "lint": "eslint *.js",
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
     "dependencies": {
-        "stb-emitter": "1.*.*"
+        "cjs-emitter": "1.*.*"
     },
     "devDependencies": {},
     "keywords": [
-        "stb",
-        "sdk",
-        "device",
-        "tv",
-        "devkit",
+        "spa",
+        "spasdk",
         "framework",
         "gettext",
         "localization"
