correct repository address format

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "name": "Stanislav Kalashnik",
         "email": "darkpark.main@gmail.com"
     },
-    "repository": "spasdk/gettext",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/spasdk/gettext.git"
+    },
     "scripts": {
         "lint": "eslint *.js",
         "jsdoc": "jsdoc --destination doc *.js readme.md"
