enable Travis CI with eslint checks

--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
         "url": "https://github.com/spasdk/gettext.git"
     },
     "scripts": {
-        "lint": "eslint *.js",
+        "lint": "eslint .",
+        "test": "npm run lint",
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
     "dependencies": {
         "cjs-emitter": "cjssdk/emitter"
     },
     "devDependencies": {
+        "eslint": "2.*.*",
         "spa-eslint-config": "spasdk/eslint-config"
     },
     "keywords": [
