--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
     "dependencies": {
-        "cjs-emitter": "cjssdk/emitter",
+        "cjs-emitter": "1.*.*",
         "cjs-gettext": "cjssdk/gettext"
     },
     "devDependencies": {
