switch to the global npm version of cjs-gettext

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "dependencies": {
         "cjs-emitter": "1.*.*",
-        "cjs-gettext": "cjssdk/gettext"
+        "cjs-gettext": "1.*.*"
     },
     "devDependencies": {
         "eslint": "3.*.*",
